--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
+crispy-bootstrap4==2024.1
 dj-database-url==0.5.0
 Django==4.2.16
-gunicorn==20.1.0
+django-bootstrap4==24.4
+django-crispy-forms==2.3
+gunicorn==23.0.0
 psycopg2==2.9.9
 sqlparse==0.5.1
-whitenoise==6.7.0
